--- a/Stop/Base.lproj/Main.storyboard
+++ b/Stop/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pNN-cp-hnb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="n0J-Rz-UpK">
     <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -23,14 +23,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="redlight" translatesAutoresizingMaskIntoConstraints="NO" id="n20-4c-afd">
-                                <rect key="frame" x="16" y="20" width="288" height="460"/>
+                                <rect key="frame" x="16" y="64" width="288" height="416"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="Y97-pG-yiD" appends="YES" id="C3L-Gf-wte"/>
                                 </connections>
                             </imageView>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sDH-dr-qzs">
-                                <rect key="frame" x="238" y="424" width="66" height="48"/>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sDH-dr-qzs">
+                                <rect key="frame" x="262.5" y="424" width="41.5" height="48"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -46,6 +46,14 @@
                             <constraint firstItem="n20-4c-afd" firstAttribute="top" secondItem="XeY-Ov-wpT" secondAttribute="bottom" id="ql0-M5-sxj"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="mXE-SN-652">
+                        <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="94j-eK-Nvu">
+                            <connections>
+                                <action selector="resetView:" destination="pNN-cp-hnb" id="6Lv-3U-DzQ"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="zXf-dg-7cB"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="countDownLabel" destination="sDH-dr-qzs" id="rja-cm-zSf"/>
                         <outlet property="trafficLightImageView" destination="n20-4c-afd" id="PeH-Na-qPk"/>
@@ -54,9 +62,27 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sZr-p5-vhG" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="Y97-pG-yiD">
                     <connections>
-                        <action selector="changeLight:" destination="pNN-cp-hnb" id="3vz-tl-BoG"/>
+                        <action selector="start:" destination="pNN-cp-hnb" id="Knc-ME-tUQ"/>
                     </connections>
                 </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="2186.25" y="40"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="pmP-ZC-epP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="n0J-Rz-UpK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jxw-ad-1pl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="pNN-cp-hnb" kind="relationship" relationship="rootViewController" id="fKB-qr-kcc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y3M-fs-Uvu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1188.75" y="40"/>
         </scene>
